crates/spicy_netlist/src/reader/snapshots/spicy_netlist__reader__statement_phase__tests__stream-with_line_continuation.snap
---
source: crates/spicy_netlist/src/reader/statement_phase.rs
expression: stream
---
StatementStream {
    statements: [
        Statement {
            tokens: [
                Token {
                    kind: Dot,
                    start: 77,
                    end: 77,
                },
                Token {
                    kind: Ident,
                    start: 78,
                    end: 80,
                },
            ],
            start: 77,
            end: 80,
        },
        Statement {
            tokens: [
                Token {
                    kind: Ident,
                    start: 62,
                    end: 63,
                },
                Token {
                    kind: WhiteSpace,
                    start: 64,
                    end: 64,
                },
                Token {
                    kind: Ident,
                    start: 65,
                    end: 66,
                },
                Token {
                    kind: WhiteSpace,
                    start: 67,
                    end: 67,
                },
                Token {
                    kind: Ident,
                    start: 68,
                    end: 70,
                },
                Token {
                    kind: WhiteSpace,
                    start: 73,
                    end: 73,
                },
                Token {
                    kind: Number,
                    start: 74,
                    end: 74,
                },
                Token {
                    kind: Ident,
                    start: 75,
                    end: 75,
                },
            ],
            start: 62,
            end: 75,
        },
        Statement {
            tokens: [
                Token {
                    kind: Ident,
                    start: 46,
                    end: 47,
                },
                Token {
                    kind: WhiteSpace,
                    start: 48,
                    end: 48,
                },
                Token {
                    kind: Ident,
                    start: 49,
                    end: 50,
                },
                Token {
                    kind: WhiteSpace,
                    start: 51,
                    end: 51,
                },
                Token {
                    kind: Ident,
                    start: 52,
                    end: 54,
                },
                Token {
                    kind: WhiteSpace,
                    start: 57,
                    end: 57,
                },
                Token {
                    kind: Number,
                    start: 58,
                    end: 58,
                },
                Token {
                    kind: Ident,
                    start: 59,
                    end: 59,
                },
                Token {
                    kind: WhiteSpace,
                    start: 60,
                    end: 60,
                },
            ],
            start: 46,
            end: 60,
        },
        Statement {
            tokens: [
                Token {
                    kind: Asterisk,
                    start: 22,
                    end: 22,
                },
                Token {
                    kind: WhiteSpace,
                    start: 23,
                    end: 23,
                },
                Token {
                    kind: Ident,
                    start: 24,
                    end: 27,
                },
                Token {
                    kind: WhiteSpace,
                    start: 28,
                    end: 28,
                },
                Token {
                    kind: Ident,
                    start: 29,
                    end: 30,
                },
                Token {
                    kind: WhiteSpace,
                    start: 31,
                    end: 31,
                },
                Token {
                    kind: Ident,
                    start: 32,
                    end: 32,
                },
                Token {
                    kind: WhiteSpace,
                    start: 33,
                    end: 33,
                },
                Token {
                    kind: Ident,
                    start: 34,
                    end: 36,
                },
                Token {
                    kind: WhiteSpace,
                    start: 37,
                    end: 37,
                },
                Token {
                    kind: Ident,
                    start: 38,
                    end: 44,
                },
            ],
            start: 22,
            end: 44,
        },
        Statement {
            tokens: [
                Token {
                    kind: Ident,
                    start: 0,
                    end: 3,
                },
                Token {
                    kind: WhiteSpace,
                    start: 4,
                    end: 4,
                },
                Token {
                    kind: Ident,
                    start: 5,
                    end: 6,
                },
                Token {
                    kind: WhiteSpace,
                    start: 7,
                    end: 8,
                },
                Token {
                    kind: Ident,
                    start: 9,
                    end: 9,
                },
                Token {
                    kind: WhiteSpace,
                    start: 10,
                    end: 10,
                },
                Token {
                    kind: Ident,
                    start: 11,
                    end: 14,
                },
                Token {
                    kind: WhiteSpace,
                    start: 15,
                    end: 15,
                },
                Token {
                    kind: Ident,
                    start: 16,
                    end: 20,
                },
            ],
            start: 0,
            end: 20,
        },
    ],
}
